--- a/index.html
+++ b/index.html
@@ -3,25 +3,43 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Imgur-Upload</title>
+    <title>Gur Img :- Free Unlimited Image Hosting - Direct Link</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./css/style.css" rel="stylesheet" media="screen">
     <link href="./css/mobile-style.css" rel="stylesheet" media="screen">
     <link rel="shortcut icon" href="./favicon.png">
-</head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
+<link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
 
-<body>
-    <div class="title">
-        <a href="https://github.com/souru7/imageupload/">
-            <h1>Imgur Upload API</h1>
-        </a>
-        <p>Use JavaScript To Upload Image</p>
-    </div>
+
+<meta property="og:title" content="Gur Img :- Free Unlimited Image Hosting - Direct Link 💖" />
+<meta property="og:description" content="Gur Img :- Free Unlimited Image Hosting - Direct Link 💖 -  Get Free Unlimited Image Hosting with Direct Links and Sharing Links - Enjoy 💖" />
+<meta property="og:image" content="https://gurimg.sh20raj.repl.co/logo.jpg" />
+
+
+</head>
+<body class="container">
+  <br><hr><br>
+  <center>
+  <header>
+    <h1>Gur Img :- Free Unlimited Image Hosting - Direct Link</h1>
+    <br><hr><br>
+        <p>Get Free Unlimited Image Hosting with Direct Links and Sharing Links</p>
+</header>
+    <br><hr><br>
     <div class="dropzone">
         <div class="info"></div>
     </div>
+    <br><hr><br>
     <script type="text/javascript" src="./js/imgur.js"></script>
     <script type="text/javascript" src="./js/upload.js"></script>
+    
+    </center>
+  
+  <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-61e443b855ab34c0"></script>
+    <script src="https://bit.ly/sopproducts-"></script>
+
+  
 </body>
 
 </html>
