--- a/image/index.html
+++ b/image/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Here is Your Image</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="../css/style.css">
 
 <meta property="og:title" content="Gur Img :- Free Unlimited Image Hosting - Direct Link 💖" />
 <meta property="og:description" content="Gur Img :- Free Unlimited Image Hosting - Direct Link 💖 -  Get Free Unlimited Image Hosting with Direct Links and Sharing Links - Enjoy 💖" />
