--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Gur Img :- Free Unlimited Image Hosting - Direct Link</title>
+    <title>Gur Img :- Free Unlimited Image Hosting - Direct Link - Share Image Across Devices</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./css/style.css" rel="stylesheet" media="screen">
     <link href="./css/mobile-style.css" rel="stylesheet" media="screen">
@@ -12,8 +12,8 @@
 <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
 
 
-<meta property="og:title" content="Gur Img :- Free Unlimited Image Hosting - Direct Link 💖" />
-<meta property="og:description" content="Gur Img :- Free Unlimited Image Hosting - Direct Link 💖 -  Get Free Unlimited Image Hosting with Direct Links and Sharing Links - Enjoy 💖" />
+<meta property="og:title" content="Gur Img :- Free Unlimited Image Hosting - Direct Link - Share Image Across Devices💖" />
+<meta property="og:description" content="Gur Img :- Free Unlimited Image Hosting - Direct Link 💖 - Share Image Across Devices -  Get Free Unlimited Image Hosting with Direct Links and Sharing Links - Enjoy 💖" />
 <meta property="og:image" content="https://gurimg.sh20raj.repl.co/logo.jpg" />
 
 
@@ -22,9 +22,24 @@
   <br><hr><br>
   <center>
   <header>
-    <h1>Gur Img :- Free Unlimited Image Hosting - Direct Link</h1>
+    <h1>Gur Img :- Free Unlimited Image Hosting - Direct Link - Share Image Across Devices</h1>
     <br><hr><br>
         <p>Get Free Unlimited Image Hosting with Direct Links and Sharing Links</p>
+        <p>Share your images across devices. Using Sharing Code.</p>
+        <hr>
+        <h2>Grab Image Using Code</h2>
+    <form action="image/" method="get">
+      <input name="id" placeholder="Enter Sharing Code" type="text" class="btn btn-outline-success">
+        <button type="submit">Grab</button>
+    </form>
+        
+        <hr>
+        <h3> Or Upload Image and Get</h3>
+        <ul style="text-align:left;">
+          <li>Sharing Code</li>
+          <li>Image Direct Link</li>
+          <li>Image Sharing Link</li>
+        </ul>
 </header>
     <br><hr><br>
     <div class="dropzone">
