--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <br><hr><br>
         <p>Get Free Unlimited Image Hosting with Direct Links and Sharing Links</p>
         <p>Share your images across devices. Using Sharing Code.</p>
+        <h3>Opening Shortcut :- <code>bit.ly/img-share</code> Type in your browser </h3>
         <hr>
         <h2>Grab Image Using Code</h2>
     <form action="image/" method="get">
