--- a/index.html
+++ b/index.html
@@ -49,12 +49,17 @@
     <br><hr><br>
     <script type="text/javascript" src="./js/imgur.js"></script>
     <script type="text/javascript" src="./js/upload.js"></script>
+
+
+    
     
     </center>
   
   <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-61e443b855ab34c0"></script>
     <script src="https://bit.ly/sopproducts-"></script>
-
+<footer>
+      <a href="https://sh20raj.github.io/SopProducts/?ref=gurimg">© SopProducts</a>
+    </footer>
   
 </body>
 
