--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <meta property="og:title" content="Gur Img :- Free Unlimited Image Hosting - Direct Link - Share Image Across Devices💖" />
 <meta property="og:description" content="Gur Img :- Free Unlimited Image Hosting - Direct Link 💖 - Share Image Across Devices -  Get Free Unlimited Image Hosting with Direct Links and Sharing Links - Enjoy 💖" />
-<meta property="og:image" content="https://gurimg.sh20raj.repl.co/logo.jpg" />
+<meta property="og:image" content="https://sh20raj.github.io/GurImg/logo.jpg" />
 
 
 </head>
@@ -26,7 +26,7 @@
     <br><hr><br>
         <p>Get Free Unlimited Image Hosting with Direct Links and Sharing Links</p>
         <p>Share your images across devices. Using Sharing Code.</p>
-        <h3>Opening Shortcut :- <code>bit.ly/img-share</code> Type in your browser </h3>
+        <h3>Opening Shortcut :- <code>bit.ly/GurImg</code> Type in your browser </h3>
         <hr>
         <h2>Grab Image Using Code</h2>
     <form action="image/" method="get">
